fix shadow overflow

--- a/src/app/components/common/Header/Header.module.scss
+++ b/src/app/components/common/Header/Header.module.scss
@@ -8,21 +8,33 @@
   left: 0;
   right: 0;
   // z-index: 0;
-  overflow-x: hidden;
-  &::before {
-    content: "";
-    width: 600px;
-    height: 600px;
-    background: radial-gradient(
-      ellipse 50% 50%,
-      rgba($secondary, 0.43),
-      transparent
-    );
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
-    transform: translate(-32%, -24%);
+  // overflow-x: hidden;
+  @media screen and (max-width: $smallDevices) {
+    background-color: $defaultTextColor;
+    overflow-x: clip;
+  }
+  .shadowGlow {
+    position: relative;
+    z-index: 0;
+    &::before {
+      content: "";
+      width: 900px;
+      height: 900px;
+      background: radial-gradient(
+        ellipse 50% 50%,
+        rgba($secondary, 0.3),
+        transparent
+      );
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      transform: translate(-32%, -24%);
+      @media screen and (max-width: $smallDevices) {
+        width: 600px;
+        height: 600px;
+      }
+    }
   }
   .headerItems {
     display: flex;
